--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,4 +1,4 @@
-name: Docker Image Pull and Push
+name: Docker镜像同步到阿里云ACR
 
 on:
   workflow_dispatch:
@@ -6,119 +6,74 @@ on:
     branches: [ main ]
 
 env:
-  ALIYUN_REGISTRY: "${{ secrets.ALIYUN_REGISTRY }}"  # e.g. "registry.cn-hangzhou.aliyuncs.com"
-  ALIYUN_NAME_SPACE: "${{ secrets.ALIYUN_NAME_SPACE }}"
-  ALIYUN_REGISTRY_USER: "${{ secrets.ALIYUN_REGISTRY_USER }}"
-  ALIYUN_REGISTRY_PASSWORD: "${{ secrets.ALIYUN_REGISTRY_PASSWORD }}"
+  # 确保以下secrets在GitHub仓库设置中正确配置
+  ALIYUN_REGISTRY: "${{ secrets.ALIYUN_REGISTRY }}"  # 示例: registry.cn-hangzhou.aliyuncs.com
+  ALIYUN_NAMESPACE: "${{ secrets.ALIYUN_NAMESPACE }}"
+  ALIYUN_USER: "${{ secrets.ALIYUN_REGISTRY_USER }}"
+  ALIYUN_PASSWORD: "${{ secrets.ALIYUN_REGISTRY_PASSWORD }}"
 
 jobs:
-  build:
-    name: Pull and Push Images
+  sync-images:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Code
+    - name: 检出代码
       uses: actions/checkout@v4
 
-    # Debug: Print environment variables (masked)
-    - name: Debug Variables
+    # 关键调试步骤：打印变量和测试网络
+    - name: 调试信息
       run: |
-        echo "ALIYUN_REGISTRY=${ALIYUN_REGISTRY}"
-        echo "ALIYUN_NAME_SPACE=${ALIYUN_NAME_SPACE}"
-        echo "ALIYUN_REGISTRY_USER=${ALIYUN_REGISTRY_USER}"
-        echo "ALIYUN_REGISTRY_PASSWORD length=${#ALIYUN_REGISTRY_PASSWORD}"
+        echo "=== 调试信息 ==="
+        echo "注册表地址: ${ALIYUN_REGISTRY}"
+        echo "命名空间: ${ALIYUN_NAMESPACE}"
+        echo "用户名: ${ALIYUN_USER}"
+        echo "密码长度: ${#ALIYUN_PASSWORD}"
+        echo "=== 网络测试 ==="
+        ping -c 2 $ALIYUN_REGISTRY || echo "Ping失败"
+        nslookup $ALIYUN_REGISTRY || echo "DNS解析失败"
+        curl -I https://$ALIYUN_REGISTRY/v2/ || echo "Curl测试失败"
 
-    # Test network connectivity
-    - name: Test Registry Connectivity
+    # 修复DNS问题的关键步骤
+    - name: 配置DNS
       run: |
-        ping -c 3 $ALIYUN_REGISTRY || true
-        nslookup $ALIYUN_REGISTRY || true
-        curl -v https://$ALIYUN_REGISTRY/v2/ || true
+        echo "=== 配置DNS ==="
+        sudo echo "nameserver 8.8.8.8" >> /etc/resolv.conf
+        sudo echo "nameserver 114.114.114.114" >> /etc/resolv.conf
+        cat /etc/resolv.conf
 
-    # Free up disk space
-    - name: Maximize build space
-      uses: easimon/maximize-build-space@master
-      with:
-        root-reserve-mb: 2048
-        swap-size-mb: 128
-        remove-dotnet: 'true'
-        remove-haskell: 'true'
-        build-mount-path: '/var/lib/docker/'
-
-    - name: Restart docker
-      run: sudo service docker restart
-
-    - name: Docker Setup
-      uses: docker/setup-buildx-action@v3
-
-    # Secure login using --password-stdin
-    - name: Login to Aliyun Container Registry
+    - name: 安装Docker CLI
       run: |
-        echo "$ALIYUN_REGISTRY_PASSWORD" | docker login -u $ALIYUN_REGISTRY_USER --password-stdin $ALIYUN_REGISTRY
+        sudo apt-get update
+        sudo apt-get install -y docker.io
+        sudo usermod -aG docker $USER
+        docker --version
 
-    - name: Process Images
+    - name: 登录阿里云容器镜像服务
       run: |
-        # Create a clean working directory
-        mkdir -p ./tmp
-        cd ./tmp
-        
-        # Process images.txt
-        declare -A duplicate_images
-        declare -A temp_map
-        
-        # Read from the original images.txt in repository root
+        echo "=== 登录ACR ==="
+        echo "$ALIYUN_PASSWORD" | docker login \
+          -u $ALIYUN_USER \
+          --password-stdin \
+          $ALIYUN_REGISTRY
+
+    - name: 同步镜像
+      run: |
+        echo "=== 开始同步镜像 ==="
         while IFS= read -r line || [ -n "$line" ]; do
-            [[ -z "$line" ]] && continue
-            if echo "$line" | grep -q '^\s*#'; then
-                continue
-            fi
-            
-            image=$(echo "$line" | awk '{print $NF}')
-            image="${image%%@*}"
-            image_name_tag=$(echo "$image" | awk -F'/' '{print $NF}')
-            name_space=$(echo "$image" | awk -F'/' '{if (NF==3) print $2; else if (NF==2) print $1; else print ""}')
-            name_space="${name_space}_"
-            image_name=$(echo "$image_name_tag" | awk -F':' '{print $1}')
-            
-            if [[ -n "${temp_map[$image_name]}" ]]; then
-                 if [[ "${temp_map[$image_name]}" != $name_space ]]; then
-                    duplicate_images[$image_name]="true"
-                 fi
-            else
-                temp_map[$image_name]=$name_space
-            fi       
-        done < ../images.txt
-        
-        # Process each image
-        while IFS= read -r line || [ -n "$line" ]; do
-            [[ -z "$line" ]] && continue
-            if echo "$line" | grep -q '^\s*#'; then
-                continue
-            fi
-        
-            echo "Processing: $line"
-            docker pull $line
-            
-            platform=$(echo "$line" | awk -F'--platform[ =]' '{if (NF>1) print $2}' | awk '{print $1}')
-            [ -z "$platform" ] && platform_prefix="" || platform_prefix="${platform//\//_}_"
-            
-            image=$(echo "$line" | awk '{print $NF}')
-            image_name_tag=$(echo "$image" | awk -F'/' '{print $NF}')
-            name_space=$(echo "$image" | awk -F'/' '{if (NF==3) print $2; else if (NF==2) print $1; else print ""}')
-            image_name=$(echo "$image_name_tag" | awk -F':' '{print $1}')
-            image_name_tag="${image_name_tag%%@*}"
-            
-            name_space_prefix=""
-            [[ -n "${duplicate_images[$image_name]}" && -n "${name_space}" ]] && name_space_prefix="${name_space}_"
-            
-            new_image="$ALIYUN_REGISTRY/$ALIYUN_NAME_SPACE/$platform_prefix$name_space_prefix$image_name_tag"
-            
-            echo "Tagging: $image -> $new_image"
-            docker tag $image $new_image
-            
-            echo "Pushing: $new_image"
-            docker push $new_image
-            
-            echo "Cleaning up..."
-            docker rmi $image $new_image
-            
-        done < ../images.txt
+          [[ -z "$line" || "$line" == \#* ]] && continue
+          
+          echo "正在拉取: $line"
+          docker pull $line
+          
+          # 处理镜像名称
+          original_image=$(echo "$line" | awk '{print $NF}')
+          target_image="$ALIYUN_REGISTRY/$ALIYUN_NAMESPACE/$(echo $original_image | sed 's|[/:]|_|g')"
+          
+          echo "重新标记为: $target_image"
+          docker tag $original_image $target_image
+          
+          echo "推送镜像..."
+          docker push $target_image
+          
+          echo "清理临时镜像..."
+          docker rmi $original_image $target_image
+        done < images.txt
